--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"build": "ng build",
 		"test": "ng test",
 		"lint": "ng lint",
-    "e2e": "ng e2e"
+		"e2e": "ng e2e",
+		"electron-dev": ".\\node_modules\\.bin\\electron electron/main.dev.js",
+		"electron-prod": ".\\node_modules\\.bin\\electron electron/main.prod.js"
 	},
 	"dependencies": {
 		"@angular/animations": "^5.0.0",
@@ -36,6 +38,7 @@
 		"@types/jasminewd2": "~2.0.2",
 		"@types/node": "~6.0.60",
 		"codelyzer": "~3.2.0",
+		"electron": "^1.7.10",
 		"jasmine-core": "~2.6.2",
 		"jasmine-spec-reporter": "~4.1.0",
 		"karma": "~1.7.0",
