--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "ng lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "e2e": "protractor ./protractor.conf.js",
-    "electron-dev": ".\\node_modules\\.bin\\electron electron/main.dev.js",
-    "electron-prod": ".\\node_modules\\.bin\\electron electron/main.prod.js"
+    "electron-dev": ".\\node_modules\\.bin\\electron electron/main.js --mode=debug --webtools=true",
+    "electron-prod": ".\\node_modules\\.bin\\electron electron/main.js --mode=release --webtools=false"
   },
   "dependencies": {
     "@angular/animations": "^5.0.0",
